--- a/index.html
+++ b/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PowerBirds Elavators</title>
+    <link rel="icon" type="image/svg+xml" href="/logo/favicon.svg" /> 
+    <meta name="theme-color" content="#2563eb" /> <title>PowerBird Elevators | Premium Lift Solutions in Karnataka</title>
+    <meta name="title" content="PowerBird Elevators | Premium Lift Solutions in Karnataka">
+    <meta name="description" content="ISO 9001:2015 Certified. Authorized by Govt of Karnataka. We provide expert installation, modernization, and 24/7 maintenance for Passenger, Hospital & Industrial elevators across Sirsi, Bangalore & 20+ cities.">
+    <meta name="keywords" content="Elevators Sirsi, Lift Company Karnataka, PowerBird Elevators, Passenger Lifts, Hospital Lifts, Elevator AMC, Lift Maintenance Bangalore, Home Lifts">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="author" content="PowerBird Elevators">
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.powerbirdelevators.in/" />
+    <meta property="og:title" content="PowerBird Elevators | Safety & Quality Above All" />
+    <meta property="og:description" content="Authorized by Govt of Karnataka. Expert installation & 24/7 service for lifts across 20+ cities. Click to get a free quote." />
+    <meta property="og:image" content="https://www.powerbirdelevators.in/social-preview.jpg" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.powerbirdelevators.in/" />
+    <meta property="twitter:title" content="PowerBird Elevators | Premium Lift Solutions" />
+    <meta property="twitter:description" content="Authorized by Govt of Karnataka. Expert installation & 24/7 service for lifts across 20+ cities." />
+    <meta property="twitter:image" content="https://www.powerbirdelevators.in/social-preview.jpg" />
+
   </head>
   <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
