--- a/index.html
+++ b/index.html
@@ -2,28 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/logo/favicon.svg" /> 
-    <meta name="theme-color" content="#2563eb" /> <title>PowerBird Elevators | Premium Lift Solutions in Karnataka</title>
+    <meta name="theme-color" content="#2563eb" /> 
+    <title>PowerBird Elevators | Premium Lift Solutions in Karnataka</title>
+    
     <meta name="title" content="PowerBird Elevators | Premium Lift Solutions in Karnataka">
     <meta name="description" content="ISO 9001:2015 Certified. Authorized by Govt of Karnataka. We provide expert installation, modernization, and 24/7 maintenance for Passenger, Hospital & Industrial elevators across Sirsi, Bangalore & 20+ cities.">
-    <meta name="keywords" content="Elevators Sirsi, Lift Company Karnataka, PowerBird Elevators, Passenger Lifts, Hospital Lifts, Elevator AMC, Lift Maintenance Bangalore, Home Lifts">
+    <meta name="keywords" content="Elevators Sirsi, Lift Company Karnataka, PowerBird Elevators, Passenger Lifts, Hospital Lifts, Elevator AMC, Lift Maintenance Bangalore, Home Lifts, best elevator company in uttara kannada, top lift services in sirsi, lift manufacturers sirsi, elevator maintenance karwar, powerbird elevators, home lifts karnataka, hospital lifts, commercial elevators hubli, lift amc services, passenger lifts, lift installation sirsi, best lifts in karnataka, power, powerbirds, karnataka elevators, sirsi lifts, karwar elevators, hubli lifts, karnataka lift company, elevator service karnataka, lift repair sirsi, elevator modernization hubli, karnataka, Lifts, elevators, lift installation, lift maintenance, elevator company, residential lifts, commercial elevators, hospital lifts, dumbwaiter lifts, lift modernization, AMC services, emergency lift repair ">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="author" content="PowerBird Elevators">
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.powerbirdelevators.in/" />
+    <meta property="og:url" content="https://powerbirdelevators.in/" />
     <meta property="og:title" content="PowerBird Elevators | Safety & Quality Above All" />
     <meta property="og:description" content="Authorized by Govt of Karnataka. Expert installation & 24/7 service for lifts across 20+ cities. Click to get a free quote." />
-    <meta property="og:image" content="https://www.powerbirdelevators.in/social-preview.jpg" />
+    <meta property="og:image" content="https://powerbirdelevators.in/og-image.jpg" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.powerbirdelevators.in/" />
+    <meta property="twitter:url" content="https://powerbirdelevators.in/" />
     <meta property="twitter:title" content="PowerBird Elevators | Premium Lift Solutions" />
     <meta property="twitter:description" content="Authorized by Govt of Karnataka. Expert installation & 24/7 service for lifts across 20+ cities." />
-    <meta property="twitter:image" content="https://www.powerbirdelevators.in/social-preview.jpg" />
+    <meta property="twitter:image" content="https://powerbirdelevators.in/og-image.jpg" />
 
   </head>
   <body>
