updated SEO, navbar, and og image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo/favicon.svg" /> 
     <meta name="theme-color" content="#2563eb" /> 
     <title>PowerBird Elevators | Premium Lift Solutions in Karnataka</title>
+    <meta name="google-site-verification" content="uQfRifAfNn26jAmpuUBtNFzGO-T_GzFeMIGdfo3FyJI" />
     
     <meta name="title" content="PowerBird Elevators | Premium Lift Solutions in Karnataka">
     <meta name="description" content="ISO 9001:2015 Certified. Authorized by Govt of Karnataka. We provide expert installation, modernization, and 24/7 maintenance for Passenger, Hospital & Industrial elevators across Sirsi, Bangalore & 20+ cities.">
